RPU-149 for Leaderboard layout change due to internationalization coming later - fix for /node non-modal page for padding to clear extra whitespace

--- a/sites/all/themes/elx_front/sass/components/h5p/_h5p.scss
+++ b/sites/all/themes/elx_front/sass/components/h5p/_h5p.scss
@@ -255,6 +255,10 @@ body.html.node-type-h5p-content {
     padding-left: 0;
     padding-right: 0;
 
+    .layout-3col.layout-swap {
+      padding-top: 0;
+    }
+
     main.layout-3col__full {
       padding-left: 0;
       padding-right: 0;
